--- a/index.html
+++ b/index.html
@@ -3,14 +3,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Staatliches" rel="stylesheet"> 
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" media="screen and (max-width: 750px)" href="css/mobile.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <title>Breaking News</title>
 </head>
 <body>
+  <nav id="main-nav">
+    <div class="container">
+      <img src="img/logo.png" alt="Breaking News Logo" class="logo">
+        <div class="social">
+          <a href="http://facebook.com" targer="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="http://twitter.com" targer="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="http://instagram.com" targer="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="http://youtube.com" targer="_blank"><i class="fab fa-youtube fa-2x"></i></a>
+        </div>
+        <ul>
+          <li><a class="current" href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+    </div>
+  </nav>
   
 </body>
 </html>
