--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         </ul>
     </div>
   </nav>
+
+  <!-- Showcase -->
+  <header id="showcase">
+    <div class="container">
+      <div class="showcase-container">
+        <div class="showcase-content">
+          <div class="category category-sports">Sports</div>
+          <h1>Some Sports Article</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed finibus tellus. Quisque pharetra mi ut condimentum dictum</p>
+          <a href="article.html" class="btn btn-primary"> Read More</a>
+        </div>
+      </div>
+    </div>
+  </header>
   
 </body>
 </html>
