--- a/index.html
+++ b/index.html
@@ -40,6 +40,73 @@
       </div>
     </div>
   </header>
+
+  <!-- Home Articles -->
+  <section id="home-articles" class="py-2">
+    <div class="container">
+        <h2>Editor Picks</h2>
+        <div class="articles-container">
+          <article class="card">
+            <img src="img/ent1.jpg" alt="Entertainment">
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amer</a>
+              </h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed finibus tellus.</p>
+            </div>
+          </article>
+          <article class="card bg-dark">
+                <div class="category category-sports">Sports</div>
+                <h3>
+                  <a href="article.html">Lorem ipsum dolor sit amer</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed finibus tellus.</p>
+            </article>
+            <article class="card">
+              <img src="img/tech1.jpg" alt="Technology">
+                <div class="category category-tech">Technology</div>
+                <h3>
+                  <a href="article.html">Lorem ipsum dolor sit amer</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed finibus tellus.</p>
+            </article>
+            <article class="card">
+                  <div class="category category-sports">Sports</div>
+                  <h3>
+                    <a href="article.html">Lorem ipsum dolor sit amer</a>
+                  </h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed finibus tellus.</p>
+                  <img src="img/sports1.jpg" alt="Technology">
+              </article>
+              <article class="card">
+                  <img src="img/tech2.jpg" alt="Technology 2">
+                    <div class="category category-tech">Technology</div>
+                    <h3>
+                      <a href="article.html">Lorem ipsum dolor sit amer</a>
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed finibus tellus.</p>
+                </article>
+                <article class="card bg-primary">
+                    <div class="category category-sports">Sports</div>
+                    <h3>
+                      <a href="article.html">Lorem ipsum dolor sit amer</a>
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed finibus tellus.</p>
+                </article>
+                <article class="card">
+                    <div>
+                      <div class="category category-ent">Entertainment</div>
+                      <h3>
+                        <a href="article.html">Lorem ipsum dolor sit amer</a>
+                      </h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed finibus tellus.</p>
+                    </div>
+                    <img src="img/ent2.jpg" alt="Entertainment">
+                  </article>
+        </div>
+    </div>
+  </section>
   
 </body>
 </html>
